# hocr-spec-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hocr-spec  requirements.txt  setup.cfg  setup.py
hocr_spec/: __init__.py  cli.py  spec.py  validate.py
