[metadata]
name = hocr-spec
summary = Implementation of the hOCR specs
author = Konstantin Baierer
author_email = konstantin.baierer@gmail.com
home-page = https://github.com/kba/hocr-spec-python
description-file = README.md
description-content-type = text/markdown
license = MIT
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Libraries
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Utilities

[bdist_wheel]
universal = 1

[files]
packages = hocr_spec

[entry_points]
console_scripts = 
    hocr-spec = hocr_spec.cli:main
